frostwire (6.10.0) stable; urgency=high
  * Telluride build 25 with Python 3.11, faster web video searches
  * Misc Screen bugfix for Linux
  * Default audio/video player setting for Linux is mplayer
  * Removed audio player playlists along with H2 database dependency
  * Search cache now works with sqlite database
  * MPlayer 1.5.0 with FFmpeg snapshot and OpenSSL 1.1.1s
  * SoundCloud search fixed
  * Torrentz2 search fixed
  * SearchManager now has 2 executors, one for crawlers another for one off requests.
  * DEV: New SearchPerformer.isDDOSProtectionActive() logic used in unit tests
  * CI: jdk19 tests
  * CI: telluride tests do not run in CI
  * CI: all search performers have tests

 -- FrostWire Team <contact@frostwire.com>  Sun, 26 Feb 2023 12:10:00 -0600

frostwire (6.9.10) stable; urgency=high
  * Java Runtime Environment 19.0.1
  * Telluride build 23
  * supports TikTok, IG Reels, YT Stories backups
  * com.google.re2j:re2j:1.7
  * com.google.code.gson:gson:2.9.0
  * com.squareup.okhttp:4.10.0
  * dev: org.junit.jupiter:junit-jupiter:5.9.0

 -- FrostWire Team <contact@frostwire.com>  Tue, 18 Oct 2022 21:38:00 -0600

frostwire (6.9.9) stable; urgency=high
  * jlibtorrent 1.2.17.0 (boost 1.80, openssl 1.1.1q)
  * dev: gradle 7.5.1 upgrade
  * jlibtorrent: libtorrent update to RC_1_2 b5873f23b40ef9054b2bd6a4db2a2d327a56d4b1
  * lt:fix wanted_done/done accounting when force-rechecking
  * lt:expose userdata via torrent_handle (back-port from 2.0)
  * lt:fix renaming of filenames that are too long for the filesystem
  * lt:made UPnP and LSD code avoid using select_reactor
  * lt:fixed tracker connections spinning when hostname lookups stall
  * lt:fixed error in pkg-config file generation in Jamfile
  * lt:improve backwards compatibility with loading magnet link resume files
  * lt:fix bind-to-device for tracker announces and UPnP
  * lt:rename peer_tos setting to peer_dscp
  * lt:fix bdecode support for large strings (>= 100 MB)
