@@ -45,7 +45,7 @@ public class IdopeSearchPerformer extends SimpleTorrentSearchPerformer {
     }
 
     @Override
-    protected String getUrl(int page, String encodedKeywords) {
+    protected String getSearchUrl(int page, String encodedKeywords) {
         return "https://" + getDomainName() + "/torrent-list/" + encodedKeywords;
     }
 
