@@ -44,7 +44,7 @@ public class LimeTorrentsSearchPerformer extends SimpleTorrentSearchPerformer {
     }
 
     @Override
-    protected String getUrl(int page, String encodedKeywords) {
+    protected String getSearchUrl(int page, String encodedKeywords) {
         String transformedKeywords = encodedKeywords.replace("%20", "-");
         return "https://" + getDomainName() + "/search/all/" + transformedKeywords + "/leechs/1/";
     }
