@@ -47,7 +47,7 @@ public class NyaaSearchPerformer extends SimpleTorrentSearchPerformer {
     }
 
     @Override
-    protected String getUrl(int page, String encodedKeywords) {
+    protected String getSearchUrl(int page, String encodedKeywords) {
         return "https://" + getDomainName() + "/?f=0&c=0_0&q=" + encodedKeywords;
     }
 
