@@ -40,7 +40,7 @@ public class TorrentDownloadsSearchPerformer extends TorrentRegexCrawlerSearchPe
     }
 
     @Override
-    protected String getUrl(int page, String encodedKeywords) {
+    protected String getSearchUrl(int page, String encodedKeywords) {
         String transformedKeywords = encodedKeywords.replace("%20", "+");
         return "https://" + getDomainName() + "/search/?search=" + transformedKeywords;
     }
