@@ -41,7 +41,7 @@ public final class YifySearchPerformer extends TorrentRegexCrawlerSearchPerforme
     }
 
     @Override
-    protected String getUrl(int page, String encodedKeywords) {
+    protected String getSearchUrl(int page, String encodedKeywords) {
         return "https://" + getDomainName() + "/search/" + encodedKeywords + "/";
     }
 
